# rust-ai-file-organizer

./: .dockerignore  Cargo.toml  Dockerfile  README.md  RELEASE_DESCRIPTION.md  config.toml  docker-compose.yml
.github/workflows/: release.yml
src/: config.rs  executor.rs  lib.rs  main.rs  pipeline.rs  watcher.rs
